--- a/hi_luda_iaa.ipynb
+++ b/hi_luda_iaa.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6c741cd8",
+   "id": "842f5cd0",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7b6b2159",
+   "id": "cc25112e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "eedaefd1",
+   "id": "0f99ff1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,29 +248,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "243823fe",
+   "execution_count": 49,
+   "id": "e629b603",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "numpy.int64"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tag Type : 1\n",
+      "#raters =  3 , #subjects =  638 , #categories =  5\n",
+      "PA =  0.6003134796238236\n",
+      "PE = 0.3414640404695534\n",
+      "Fleiss' Kappa = 0.393\n",
+      "\n",
+      "Tag Type : 2\n",
+      "#raters =  3 , #subjects =  638 , #categories =  4\n",
+      "PA =  0.7126436781609167\n",
+      "PE = 0.38718773509606924\n",
+      "Fleiss' Kappa = 0.531\n",
+      "\n",
+      "Tag Type : 3\n",
+      "#raters =  3 , #subjects =  638 , #categories =  6\n",
+      "PA =  0.6269592476489018\n",
+      "PE = 0.21707235581411347\n",
+      "Fleiss' Kappa = 0.524\n",
+      "\n",
+      "Tag Type : 4\n",
+      "#raters =  3 , #subjects =  638 , #categories =  6\n",
+      "PA =  0.6844305120167168\n",
+      "PE = 0.3377543678051731\n",
+      "Fleiss' Kappa = 0.523\n",
+      "\n"
+     ]
     }
    ],
-   "source": [
-    "type(pd.DataFrame(annotation_results[0]).iloc[0]['annotator1'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c1f133e",
-   "metadata": {},
    "source": [
     "for i in range(4):\n",
     "    print(f\"Tag Type : {i+1}\")\n",
@@ -281,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9fb1dd1",
+   "id": "4d4fbb79",
    "metadata": {},
    "outputs": [],
    "source": []
