--- a/hi_luda_iaa.ipynb
+++ b/hi_luda_iaa.ipynb
@@ -10,17 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "c885a8f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "id": "d5e87bd5",
    "metadata": {},
    "outputs": [],
@@ -30,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "842f5cd0",
+   "execution_count": 44,
+   "id": "48a77b24",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +175,7 @@
        "[638 rows x 5 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "ad641c0d",
    "metadata": {},
    "outputs": [],
@@ -205,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "cc25112e",
+   "execution_count": 46,
+   "id": "06f9ba9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "0f99ff1b",
+   "execution_count": 47,
+   "id": "c55a2349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "e629b603",
+   "execution_count": 48,
+   "id": "116dc353",
    "metadata": {},
    "outputs": [
     {
@@ -291,9 +293,332 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6bfc3e5",
+   "metadata": {},
+   "source": [
+    "# Accuracy per annotators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d71ab642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_labels = [[],[],[],[]]\n",
+    "for gold in annotation_result_df[\"결론\"]:\n",
+    "    for i in range(4):\n",
+    "        gold_labels[i].append(\n",
+    "            int(str(gold)[i]),\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "446431ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tag Type : 1\n",
+      "원익 : 0.790\n",
+      "수민: 0.738\n",
+      "유정: 0.715\n",
+      "\n",
+      "Tag Type : 2\n",
+      "원익 : 0.851\n",
+      "수민: 0.839\n",
+      "유정: 0.784\n",
+      "\n",
+      "Tag Type : 3\n",
+      "원익 : 0.839\n",
+      "수민: 0.773\n",
+      "유정: 0.727\n",
+      "\n",
+      "Tag Type : 4\n",
+      "원익 : 0.813\n",
+      "수민: 0.785\n",
+      "유정: 0.803\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ann1_avg = 0\n",
+    "ann2_avg = 0\n",
+    "ann3_avg = 0\n",
+    "for i in range(4):\n",
+    "    print(f\"Tag Type : {i+1}\")\n",
+    "    ann1_acc = sum(pd.DataFrame(annotation_results[i])['annotator1'].to_numpy() == np.array(gold_labels[i])) / len(gold_labels[i])\n",
+    "    ann2_acc = sum(pd.DataFrame(annotation_results[i])['annotator2'].to_numpy() == np.array(gold_labels[i])) / len(gold_labels[i])\n",
+    "    ann3_acc = sum(pd.DataFrame(annotation_results[i])['annotator3'].to_numpy() == np.array(gold_labels[i])) / len(gold_labels[i])\n",
+    "    ann1_avg += ann1_acc\n",
+    "    ann2_avg += ann2_acc\n",
+    "    ann3_avg += ann3_acc\n",
+    "    print(f\"원익 : {ann1_acc:.3f}\")\n",
+    "    print(f\"수민: {ann2_acc:.3f}\")\n",
+    "    print(f\"유정: {ann3_acc:.3f}\")\n",
+    "    print()\n",
+    "# print(f\"Average Accuracy\")\n",
+    "# print(f\"원익 : {ann1_avg/4}\")\n",
+    "# print(f\"수민: {ann2_avg/4}\")\n",
+    "# print(f\"유정: {ann3_avg/4}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b46f019",
+   "metadata": {},
+   "source": [
+    "# IAA per label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f437dc15",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label : 1\n",
+      "Attribute 1\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.7763845350052229\n",
+      "PE = 0.6817597660749752\n",
+      "Fleiss' Kappa = 0.297\n",
+      "\n",
+      "Attribute 2\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.7053291536050136\n",
+      "PE = 0.5010094458802706\n",
+      "Fleiss' Kappa = 0.409\n",
+      "\n",
+      "Attribute 3\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.8578892371995809\n",
+      "PE = 0.7614317425689168\n",
+      "Fleiss' Kappa = 0.404\n",
+      "\n",
+      "Attribute 4\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9268547544409614\n",
+      "PE = 0.8626280096391437\n",
+      "Fleiss' Kappa = 0.468\n",
+      "\n",
+      "Attribute 5\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.934169278996865\n",
+      "PE = 0.8760991167758003\n",
+      "Fleiss' Kappa = 0.469\n",
+      "\n",
+      "Label : 2\n",
+      "Attribute 1\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.7648902821316585\n",
+      "PE = 0.5079931298718456\n",
+      "Fleiss' Kappa = 0.522\n",
+      "\n",
+      "Attribute 2\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9101358411703239\n",
+      "PE = 0.8161662020704286\n",
+      "Fleiss' Kappa = 0.511\n",
+      "\n",
+      "Attribute 3\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.8808777429467077\n",
+      "PE = 0.7814459588862357\n",
+      "Fleiss' Kappa = 0.455\n",
+      "\n",
+      "Attribute 4\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.8693834900731443\n",
+      "PE = 0.6687701793636287\n",
+      "Fleiss' Kappa = 0.606\n",
+      "\n",
+      "Label : 3\n",
+      "Attribute 1\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9414838035527685\n",
+      "PE = 0.8537837569293627\n",
+      "Fleiss' Kappa = 0.6\n",
+      "\n",
+      "Attribute 2\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.916405433646813\n",
+      "PE = 0.7517014267635822\n",
+      "Fleiss' Kappa = 0.663\n",
+      "\n",
+      "Attribute 3\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.7659352142110744\n",
+      "PE = 0.5631108403241145\n",
+      "Fleiss' Kappa = 0.464\n",
+      "\n",
+      "Attribute 4\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.8955067920585161\n",
+      "PE = 0.8103764921946739\n",
+      "Fleiss' Kappa = 0.449\n",
+      "\n",
+      "Attribute 5\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.7805642633228819\n",
+      "PE = 0.6170329388359872\n",
+      "Fleiss' Kappa = 0.427\n",
+      "\n",
+      "Attribute 6\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9540229885057468\n",
+      "PE = 0.8381392565805061\n",
+      "Fleiss' Kappa = 0.716\n",
+      "\n",
+      "Label : 4\n",
+      "Attribute 1\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.7492163009404363\n",
+      "PE = 0.5018365472910927\n",
+      "Fleiss' Kappa = 0.497\n",
+      "\n",
+      "Attribute 2\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9247648902821317\n",
+      "PE = 0.8270604652076925\n",
+      "Fleiss' Kappa = 0.565\n",
+      "\n",
+      "Attribute 3\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9780564263322886\n",
+      "PE = 0.9471397577548264\n",
+      "Fleiss' Kappa = 0.585\n",
+      "\n",
+      "Attribute 4\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9477533960292579\n",
+      "PE = 0.8211713939743341\n",
+      "Fleiss' Kappa = 0.708\n",
+      "\n",
+      "Attribute 5\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.8401253918495282\n",
+      "PE = 0.7058177712701548\n",
+      "Fleiss' Kappa = 0.457\n",
+      "\n",
+      "Attribute 6\n",
+      "#raters =  3 , #subjects =  638 , #categories =  2\n",
+      "PA =  0.9289446185997906\n",
+      "PE = 0.8724828001122455\n",
+      "Fleiss' Kappa = 0.443\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "num_categories_per_label = {\n",
+    "    1: 5,\n",
+    "    2: 4,\n",
+    "    3: 6,\n",
+    "    4: 6,\n",
+    "}\n",
+    "for i in range(4):\n",
+    "    print(f\"Label : {i+1}\")\n",
+    "    # reformat into binary label per attributes\n",
+    "    for j in range(num_categories_per_label[i+1]):\n",
+    "        print(f\"Attribute {j+1}\")\n",
+    "        reformatted_annotation_result = copy.deepcopy(annotation_results[i])\n",
+    "        for ann in reformatted_annotation_result:\n",
+    "            for a in ann.keys():\n",
+    "                if ann[a] == j+1:\n",
+    "                    ann[a] = 1\n",
+    "                else:\n",
+    "                    ann[a] = 2\n",
+    "        calculate_iaa(pd.DataFrame(reformatted_annotation_result))\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c394c2",
+   "metadata": {},
+   "source": [
+    "# Label Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "534c9144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_labels = np.array(gold_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "88ca40ba",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label 1\n",
+      "109\t0.17084639498432602\n",
+      "343\t0.5376175548589341\n",
+      "83\t0.13009404388714735\n",
+      "47\t0.07366771159874608\n",
+      "56\t0.0877742946708464\n",
+      "Label 2\n",
+      "346\t0.542319749216301\n",
+      "62\t0.09717868338557993\n",
+      "80\t0.12539184952978055\n",
+      "150\t0.23510971786833856\n",
+      "Label 3\n",
+      "55\t0.08620689655172414\n",
+      "89\t0.13949843260188088\n",
+      "181\t0.2836990595611285\n",
+      "84\t0.13166144200626959\n",
+      "165\t0.25862068965517243\n",
+      "64\t0.10031347962382445\n",
+      "Label 4\n",
+      "315\t0.493730407523511\n",
+      "66\t0.10344827586206896\n",
+      "21\t0.032915360501567396\n",
+      "70\t0.109717868338558\n",
+      "116\t0.18181818181818182\n",
+      "50\t0.07836990595611286\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter_per_label = {}\n",
+    "for i in range(len(gold_labels)):\n",
+    "    counter_per_label[i] = Counter(gold_labels[i])\n",
+    "    print(f\"Label {i+1}\")\n",
+    "    total = len(gold_labels[i])\n",
+    "    for label, attribute_cnt in sorted(counter_per_label[i].items()):\n",
+    "        print(f\"{attribute_cnt}\\t{attribute_cnt/total}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d4fbb79",
+   "id": "692c6516",
    "metadata": {},
    "outputs": [],
    "source": []
