--- a/hi_luda_iaa.ipynb
+++ b/hi_luda_iaa.ipynb
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "id": "d5e87bd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotation_result_df = pd.read_csv(\"iaa.csv\")"
+    "annotation_result_df = pd.read_csv(\"iaa_0509.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "id": "48a77b24",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>num</th>\n",
        "      <th>원익</th>\n",
        "      <th>수민</th>\n",
        "      <th>유정</th>\n",
@@ -67,40 +66,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11</td>\n",
+       "      <td>2155</td>\n",
        "      <td>2111</td>\n",
-       "      <td>2111</td>\n",
-       "      <td>2111</td>\n",
+       "      <td>2115</td>\n",
        "      <td>2111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>12</td>\n",
-       "      <td>2341</td>\n",
-       "      <td>2141</td>\n",
-       "      <td>2131</td>\n",
-       "      <td>2341</td>\n",
+       "      <td>3331</td>\n",
+       "      <td>3341</td>\n",
+       "      <td>3362</td>\n",
+       "      <td>3341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>19</td>\n",
        "      <td>4131</td>\n",
        "      <td>4131</td>\n",
-       "      <td>4421</td>\n",
-       "      <td>3131</td>\n",
+       "      <td>4131</td>\n",
+       "      <td>4131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>25</td>\n",
        "      <td>2411</td>\n",
-       "      <td>2131</td>\n",
-       "      <td>2141</td>\n",
-       "      <td>2431</td>\n",
+       "      <td>4431</td>\n",
+       "      <td>4431</td>\n",
+       "      <td>4431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>27</td>\n",
-       "      <td>1155</td>\n",
+       "      <td>2151</td>\n",
        "      <td>2151</td>\n",
        "      <td>2131</td>\n",
        "      <td>2151</td>\n",
@@ -111,71 +105,65 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>633</th>\n",
-       "      <td>2426</td>\n",
-       "      <td>2133</td>\n",
+       "      <th>634</th>\n",
+       "      <td>2131</td>\n",
        "      <td>2133</td>\n",
        "      <td>2131</td>\n",
        "      <td>2133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>634</th>\n",
-       "      <td>2432</td>\n",
+       "      <th>635</th>\n",
        "      <td>4421</td>\n",
        "      <td>2421</td>\n",
        "      <td>2421</td>\n",
        "      <td>2421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>635</th>\n",
-       "      <td>2434</td>\n",
+       "      <th>636</th>\n",
        "      <td>2262</td>\n",
        "      <td>2162</td>\n",
        "      <td>2431</td>\n",
        "      <td>2262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>636</th>\n",
-       "      <td>2435</td>\n",
+       "      <th>637</th>\n",
        "      <td>3345</td>\n",
        "      <td>3355</td>\n",
-       "      <td>3155</td>\n",
+       "      <td>2155</td>\n",
        "      <td>3345</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>637</th>\n",
-       "      <td>2437</td>\n",
+       "      <th>638</th>\n",
        "      <td>2221</td>\n",
-       "      <td>4421</td>\n",
+       "      <td>4431</td>\n",
        "      <td>2421</td>\n",
        "      <td>2221</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>638 rows × 5 columns</p>\n",
+       "<p>639 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      num    원익    수민    유정    결론\n",
-       "0      11  2111  2111  2111  2111\n",
-       "1      12  2341  2141  2131  2341\n",
-       "2      19  4131  4131  4421  3131\n",
-       "3      25  2411  2131  2141  2431\n",
-       "4      27  1155  2151  2131  2151\n",
-       "..    ...   ...   ...   ...   ...\n",
-       "633  2426  2133  2133  2131  2133\n",
-       "634  2432  4421  2421  2421  2421\n",
-       "635  2434  2262  2162  2431  2262\n",
-       "636  2435  3345  3355  3155  3345\n",
-       "637  2437  2221  4421  2421  2221\n",
+       "       원익    수민    유정    결론\n",
+       "0    2155  2111  2115  2111\n",
+       "1    3331  3341  3362  3341\n",
+       "2    4131  4131  4131  4131\n",
+       "3    2411  4431  4431  4431\n",
+       "4    2151  2151  2131  2151\n",
+       "..    ...   ...   ...   ...\n",
+       "634  2131  2133  2131  2133\n",
+       "635  4421  2421  2421  2421\n",
+       "636  2262  2162  2431  2262\n",
+       "637  3345  3355  2155  3345\n",
+       "638  2221  4431  2421  2221\n",
        "\n",
-       "[638 rows x 5 columns]"
+       "[639 rows x 4 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "id": "ad641c0d",
    "metadata": {},
    "outputs": [],
@@ -207,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "id": "06f9ba9d",
    "metadata": {},
    "outputs": [],
@@ -224,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "id": "c55a2349",
    "metadata": {},
    "outputs": [],
@@ -250,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "id": "116dc353",
    "metadata": {},
    "outputs": [
@@ -259,28 +247,28 @@
      "output_type": "stream",
      "text": [
       "Tag Type : 1\n",
-      "#raters =  3 , #subjects =  638 , #categories =  5\n",
-      "PA =  0.6003134796238236\n",
-      "PE = 0.3414640404695534\n",
-      "Fleiss' Kappa = 0.393\n",
+      "#raters =  3 , #subjects =  639 , #categories =  5\n",
+      "PA =  0.7000521648408947\n",
+      "PE = 0.3565035569781836\n",
+      "Fleiss' Kappa = 0.534\n",
       "\n",
       "Tag Type : 2\n",
-      "#raters =  3 , #subjects =  638 , #categories =  4\n",
-      "PA =  0.7126436781609167\n",
-      "PE = 0.38718773509606924\n",
-      "Fleiss' Kappa = 0.531\n",
+      "#raters =  3 , #subjects =  639 , #categories =  4\n",
+      "PA =  0.7866458007303051\n",
+      "PE = 0.36789220028142344\n",
+      "Fleiss' Kappa = 0.662\n",
       "\n",
       "Tag Type : 3\n",
-      "#raters =  3 , #subjects =  638 , #categories =  6\n",
-      "PA =  0.6269592476489018\n",
-      "PE = 0.21707235581411347\n",
-      "Fleiss' Kappa = 0.524\n",
+      "#raters =  3 , #subjects =  639 , #categories =  6\n",
+      "PA =  0.7167449139280103\n",
+      "PE = 0.19546359087308487\n",
+      "Fleiss' Kappa = 0.648\n",
       "\n",
       "Tag Type : 4\n",
-      "#raters =  3 , #subjects =  638 , #categories =  6\n",
-      "PA =  0.6844305120167168\n",
-      "PE = 0.3377543678051731\n",
-      "Fleiss' Kappa = 0.523\n",
+      "#raters =  3 , #subjects =  639 , #categories =  6\n",
+      "PA =  0.7230046948356783\n",
+      "PE = 0.3006488087123176\n",
+      "Fleiss' Kappa = 0.604\n",
       "\n"
      ]
     }
@@ -302,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "d71ab642",
    "metadata": {},
    "outputs": [],
@@ -317,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "446431ae",
    "metadata": {},
    "outputs": [
@@ -326,24 +314,24 @@
      "output_type": "stream",
      "text": [
       "Tag Type : 1\n",
-      "원익 : 0.790\n",
-      "수민: 0.738\n",
-      "유정: 0.715\n",
+      "원익 : 0.803\n",
+      "수민: 0.889\n",
+      "유정: 0.740\n",
       "\n",
       "Tag Type : 2\n",
-      "원익 : 0.851\n",
-      "수민: 0.839\n",
-      "유정: 0.784\n",
+      "원익 : 0.875\n",
+      "수민: 0.942\n",
+      "유정: 0.818\n",
       "\n",
       "Tag Type : 3\n",
-      "원익 : 0.839\n",
-      "수민: 0.773\n",
-      "유정: 0.727\n",
+      "원익 : 0.806\n",
+      "수민: 0.914\n",
+      "유정: 0.778\n",
       "\n",
       "Tag Type : 4\n",
-      "원익 : 0.813\n",
-      "수민: 0.785\n",
-      "유정: 0.803\n",
+      "원익 : 0.787\n",
+      "수민: 0.886\n",
+      "유정: 0.801\n",
       "\n"
      ]
     }
@@ -380,10 +368,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "id": "f437dc15",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -392,133 +380,133 @@
      "text": [
       "Label : 1\n",
       "Attribute 1\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.7763845350052229\n",
-      "PE = 0.6817597660749752\n",
-      "Fleiss' Kappa = 0.297\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.8685446009389659\n",
+      "PE = 0.7602376561577777\n",
+      "Fleiss' Kappa = 0.452\n",
       "\n",
       "Attribute 2\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.7053291536050136\n",
-      "PE = 0.5010094458802706\n",
-      "Fleiss' Kappa = 0.409\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.750652060511213\n",
+      "PE = 0.5051736256523666\n",
+      "Fleiss' Kappa = 0.496\n",
       "\n",
       "Attribute 3\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.8578892371995809\n",
-      "PE = 0.7614317425689168\n",
-      "Fleiss' Kappa = 0.404\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9144496609285341\n",
+      "PE = 0.7693481354130696\n",
+      "Fleiss' Kappa = 0.629\n",
       "\n",
       "Attribute 4\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9268547544409614\n",
-      "PE = 0.8626280096391437\n",
-      "Fleiss' Kappa = 0.468\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9436619718309861\n",
+      "PE = 0.8601644838796492\n",
+      "Fleiss' Kappa = 0.597\n",
       "\n",
       "Attribute 5\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.934169278996865\n",
-      "PE = 0.8760991167758003\n",
-      "Fleiss' Kappa = 0.469\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9227960354720918\n",
+      "PE = 0.8180832128535038\n",
+      "Fleiss' Kappa = 0.576\n",
       "\n",
       "Label : 2\n",
       "Attribute 1\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.7648902821316585\n",
-      "PE = 0.5079931298718456\n",
-      "Fleiss' Kappa = 0.522\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.8309859154929558\n",
+      "PE = 0.5025536825738138\n",
+      "Fleiss' Kappa = 0.66\n",
       "\n",
       "Attribute 2\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9101358411703239\n",
-      "PE = 0.8161662020704286\n",
-      "Fleiss' Kappa = 0.511\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9227960354720921\n",
+      "PE = 0.8230956091462898\n",
+      "Fleiss' Kappa = 0.564\n",
       "\n",
       "Attribute 3\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.8808777429467077\n",
-      "PE = 0.7814459588862357\n",
-      "Fleiss' Kappa = 0.455\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9186228482003128\n",
+      "PE = 0.7632570670842032\n",
+      "Fleiss' Kappa = 0.656\n",
       "\n",
       "Attribute 4\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.8693834900731443\n",
-      "PE = 0.6687701793636287\n",
-      "Fleiss' Kappa = 0.606\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9008868022952524\n",
+      "PE = 0.6468780417585402\n",
+      "Fleiss' Kappa = 0.719\n",
       "\n",
       "Label : 3\n",
       "Attribute 1\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9414838035527685\n",
-      "PE = 0.8537837569293627\n",
-      "Fleiss' Kappa = 0.6\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9718309859154928\n",
+      "PE = 0.837510194185457\n",
+      "Fleiss' Kappa = 0.827\n",
       "\n",
       "Attribute 2\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.916405433646813\n",
-      "PE = 0.7517014267635822\n",
-      "Fleiss' Kappa = 0.663\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9436619718309859\n",
+      "PE = 0.7625005816502213\n",
+      "Fleiss' Kappa = 0.763\n",
       "\n",
       "Attribute 3\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.7659352142110744\n",
-      "PE = 0.5631108403241145\n",
-      "Fleiss' Kappa = 0.464\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.8445487741262377\n",
+      "PE = 0.6022737013281219\n",
+      "Fleiss' Kappa = 0.609\n",
       "\n",
       "Attribute 4\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.8955067920585161\n",
-      "PE = 0.8103764921946739\n",
-      "Fleiss' Kappa = 0.449\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9165362545644233\n",
+      "PE = 0.8098162964922206\n",
+      "Fleiss' Kappa = 0.561\n",
       "\n",
       "Attribute 5\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.7805642633228819\n",
-      "PE = 0.6170329388359872\n",
-      "Fleiss' Kappa = 0.427\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.804903495044338\n",
+      "PE = 0.6282815617015916\n",
+      "Fleiss' Kappa = 0.475\n",
       "\n",
       "Attribute 6\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9540229885057468\n",
-      "PE = 0.8381392565805061\n",
-      "Fleiss' Kappa = 0.716\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9520083463745436\n",
+      "PE = 0.7505448463885576\n",
+      "Fleiss' Kappa = 0.808\n",
       "\n",
       "Label : 4\n",
       "Attribute 1\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.7492163009404363\n",
-      "PE = 0.5018365472910927\n",
-      "Fleiss' Kappa = 0.497\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.8111632759520058\n",
+      "PE = 0.5004115770571573\n",
+      "Fleiss' Kappa = 0.622\n",
       "\n",
       "Attribute 2\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9247648902821317\n",
-      "PE = 0.8270604652076925\n",
-      "Fleiss' Kappa = 0.565\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9217527386541468\n",
+      "PE = 0.8273025389338289\n",
+      "Fleiss' Kappa = 0.547\n",
       "\n",
       "Attribute 3\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9780564263322886\n",
-      "PE = 0.9471397577548264\n",
-      "Fleiss' Kappa = 0.585\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9801773604590507\n",
+      "PE = 0.939361433773918\n",
+      "Fleiss' Kappa = 0.673\n",
       "\n",
       "Attribute 4\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9477533960292579\n",
-      "PE = 0.8211713939743341\n",
-      "Fleiss' Kappa = 0.708\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9520083463745435\n",
+      "PE = 0.7984254762524798\n",
+      "Fleiss' Kappa = 0.762\n",
       "\n",
       "Attribute 5\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.8401253918495282\n",
-      "PE = 0.7058177712701548\n",
-      "Fleiss' Kappa = 0.457\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.8539384454877401\n",
+      "PE = 0.7008530053560802\n",
+      "Fleiss' Kappa = 0.512\n",
       "\n",
       "Attribute 6\n",
-      "#raters =  3 , #subjects =  638 , #categories =  2\n",
-      "PA =  0.9289446185997906\n",
-      "PE = 0.8724828001122455\n",
-      "Fleiss' Kappa = 0.443\n",
+      "#raters =  3 , #subjects =  639 , #categories =  2\n",
+      "PA =  0.9269692227438705\n",
+      "PE = 0.8349435860511705\n",
+      "Fleiss' Kappa = 0.558\n",
       "\n"
      ]
     }
@@ -557,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "id": "534c9144",
    "metadata": {},
    "outputs": [],
@@ -567,41 +555,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "id": "88ca40ba",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Label 1\n",
-      "109\t0.17084639498432602\n",
-      "343\t0.5376175548589341\n",
-      "83\t0.13009404388714735\n",
-      "47\t0.07366771159874608\n",
-      "56\t0.0877742946708464\n",
+      "104\t0.162754303599374\n",
+      "342\t0.5352112676056338\n",
+      "82\t0.12832550860719874\n",
+      "49\t0.07668231611893583\n",
+      "62\t0.09702660406885759\n",
       "Label 2\n",
-      "346\t0.542319749216301\n",
-      "62\t0.09717868338557993\n",
-      "80\t0.12539184952978055\n",
-      "150\t0.23510971786833856\n",
+      "345\t0.539906103286385\n",
+      "63\t0.09859154929577464\n",
+      "81\t0.1267605633802817\n",
+      "150\t0.2347417840375587\n",
       "Label 3\n",
-      "55\t0.08620689655172414\n",
-      "89\t0.13949843260188088\n",
-      "181\t0.2836990595611285\n",
-      "84\t0.13166144200626959\n",
-      "165\t0.25862068965517243\n",
-      "64\t0.10031347962382445\n",
+      "55\t0.08607198748043818\n",
+      "89\t0.13928012519561817\n",
+      "178\t0.27856025039123633\n",
+      "61\t0.09546165884194054\n",
+      "167\t0.26134585289514867\n",
+      "89\t0.13928012519561817\n",
       "Label 4\n",
-      "315\t0.493730407523511\n",
-      "66\t0.10344827586206896\n",
-      "21\t0.032915360501567396\n",
-      "70\t0.109717868338558\n",
-      "116\t0.18181818181818182\n",
-      "50\t0.07836990595611286\n"
+      "314\t0.49139280125195617\n",
+      "54\t0.08450704225352113\n",
+      "21\t0.03286384976525822\n",
+      "72\t0.11267605633802817\n",
+      "114\t0.1784037558685446\n",
+      "64\t0.10015649452269171\n"
      ]
     }
    ],
